Fixed banner text size on mobile

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -261,9 +261,6 @@ p.large
   padding-top: 3em
   padding-bottom: 3em
 
-.home-3
-  // background-color: $light-gray
-
 /* Banner */
 .banner
   width: 100%
@@ -274,7 +271,6 @@ p.large
   z-index: -1
   display: block
   background-repeat: no-repeat
-  // padding-top: 19px
   background-image: url("/assets/kettlebell-min.jpg")
   margin-bottom: 1%
 
@@ -284,11 +280,19 @@ p.large
   .banner-header
     margin: auto
     color: white
-    font-size: 4.8em
+    font-size: 5em
+    padding: 0px
+
+  .banner-header-small
+    margin: auto
+    color: white
+    font-size: 4.5em
     padding: 0px
 
   .grid
     height: 100%
+
+
 
 .banner.coaches
   background-image: url("/assets/rings-min.jpg")
